Improvements
- moved to Java15
- classes for new tuple format (WIP)